# AzurLaneLuaScripts

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: update.yml
Adjust/: ship_data_statistics.cpp
CN/: buffcfg.lua  bufffxpreloadlist.lua  classes.lua  config.lua  const.lua  genvertify.lua  hybridclrconst.lua  include.lua  jp  localconfig.lua  luaex.lua  main.lua  runpaintingfilte.lua  skillcfg.lua  version.txt
CN/fixed/: verticaltextinjector.lua
CN/framework/: i18n.lua  levelexp.lua  protobuf.lua  underscore.lua
CN/gamecfg/: akibagraph.lua  assistantinfo.lua  chargeshiptalkinfo.lua  include.lua  spinecharcustominfo.lua  summerfeastgraph.lua
CN/mgr/: bgmmgr.lua  brightnessmgr.lua  camerartmgr.lua  changeskinmgr.lua  connectionmgr.lua  crimgr.lua  filedownloadmgr.lua  fontmgr.lua  (+26 more)
EN/: buffcfg.lua  classes.lua  config.lua  const.lua  include.lua  localconfig.lua  luadebug.lua  luadebugjit.lua  main.lua  runpaintingfilte.lua  skillcfg.lua  tolua.lua  version.txt
JP/: buffcfg.lua  classes.lua  config.lua  const.lua  genvertify.lua  hotfix.lua  include.lua  main.lua  memprofiler.lua  runpaintingfilte.lua  skillcfg.lua
KR/: buffcfg.lua  classes.lua  config.lua  const.lua  hybridclrconst.lua  include.lua  localconfig.lua  main.lua  memprofiler.lua  runpaintingfilte.lua  skillcfg.lua  version.txt
Output/: ship_data_statistics
TW/: buffcfg.lua  cardcfg.lua  classes.lua  config.lua  const.lua  localconfig.lua  main.lua  runpaintingfilte.lua  skillcfg.lua  version.txt
adjust/: main.cpp  out.c
versions/: CN.txt  EN.txt  JP.txt  KR.txt  TW.txt
(+296539 files in other folders)
